--- a/package.json
+++ b/package.json
@@ -17,27 +17,36 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "yeoman-test": "^1.6.0",
-    "yeoman-assert": "^3.0.0",
     "coveralls": "^2.12.0",
-    "nsp": "^2.6.3",
     "eslint": "^3.18.0",
     "eslint-config-xo-space": "^0.16.0",
     "jest": "^19.0.2",
-    "jest-cli": "^19.0.1"
+    "jest-cli": "^19.0.1",
+    "nsp": "^2.6.3",
+    "yeoman-assert": "^3.0.0",
+    "yeoman-test": "^1.6.0"
   },
   "dependencies": {
-    "yeoman-generator": "^1.0.0",
     "chalk": "^1.1.3",
+    "mkdirp": "^0.5.1",
+    "underscore.string": "^3.3.4",
+    "uuid": "^3.0.1",
+    "vs_projectname": "^1.0.2",
+    "yeoman-generator": "^1.0.0",
     "yosay": "^2.0.0"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "testRegex": "(/test/.*|(\\.|/)(test|spec))\\.jsx?$"
   },
   "scripts": {
     "prepublish": "nsp check",
     "pretest": "eslint . --fix",
-    "test": "jest"
+    "test": "jest",
+    "scaffold:webapi": "dotnet new webapi --name WebApi --output tmp/webapi",
+    "scaffold:classlib": "dotnet new classlib --name Lib --output tmp/classlib",
+    "scaffold:xunit": "dotnet new xunit --name Tests --output tmp/xunit",
+    "scaffold:solution": "dotnet new sln --name Tmp --output tmp/solution"
   },
   "eslintConfig": {
     "extends": "xo-space",
