--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "postscaffold:webapi": "node scripts/templatize-webapi.js",
     "prescaffold:classlib": "rimraf generators/classlib/templates",
     "scaffold:classlib": "dotnet new classlib --name classlib --output generators/classlib/templates",
+    "postscaffold:classlib": "node scripts/templatize-classlib.js",
     "prescaffold:xunit": "rimraf generators/xunit/templates",
     "scaffold:xunit": "dotnet new xunit --name xunit --output generators/xunit/templates",
     "prescaffold:solution": "rimraf generators/solution/templates",
