--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "generator-dotnet",
-  "version": "0.0.0",
+  "name": "@kraihn/generator-dotnet",
+  "version": "0.1.0",
   "description": "",
   "homepage": "",
   "author": {
@@ -17,27 +17,45 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "yeoman-test": "^1.6.0",
-    "yeoman-assert": "^3.0.0",
     "coveralls": "^2.12.0",
-    "nsp": "^2.6.3",
     "eslint": "^3.18.0",
     "eslint-config-xo-space": "^0.16.0",
     "jest": "^19.0.2",
-    "jest-cli": "^19.0.1"
+    "jest-cli": "^19.0.1",
+    "nsp": "^2.6.3",
+    "rimraf": "^2.6.1",
+    "yeoman-assert": "^3.0.0",
+    "yeoman-test": "^1.6.0"
   },
   "dependencies": {
-    "yeoman-generator": "^1.0.0",
     "chalk": "^1.1.3",
+    "mkdirp": "^0.5.1",
+    "underscore.string": "^3.3.4",
+    "uuid": "^3.0.1",
+    "vs_projectname": "^1.0.2",
+    "yeoman-generator": "^1.0.0",
     "yosay": "^2.0.0"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "testRegex": "(/test/.*|(\\.|/)(test|spec))\\.jsx?$"
   },
   "scripts": {
     "prepublish": "nsp check",
     "pretest": "eslint . --fix",
-    "test": "jest"
+    "test": "jest",
+    "scaffold:dotnet": "npm run scaffold:solution && npm run scaffold:webapi && npm run scaffold:classlib && npm run scaffold:xunit",
+    "prescaffold:webapi": "rimraf generators/webapi/templates",
+    "scaffold:webapi": "dotnet new webapi --name webapi --output generators/webapi/templates",
+    "postscaffold:webapi": "node scripts/templatize-webapi.js",
+    "prescaffold:classlib": "rimraf generators/classlib/templates",
+    "scaffold:classlib": "dotnet new classlib --name classlib --output generators/classlib/templates",
+    "postscaffold:classlib": "node scripts/templatize-classlib.js",
+    "prescaffold:xunit": "rimraf generators/xunit/templates",
+    "scaffold:xunit": "dotnet new xunit --name xunit --output generators/xunit/templates",
+    "postscaffold:xunit": "node scripts/templatize-xunit.js",
+    "prescaffold:solution": "rimraf generators/solution/templates",
+    "scaffold:solution": "dotnet new sln --name solution --output generators/solution/templates"
   },
   "eslintConfig": {
     "extends": "xo-space",
