--- a/generators/webapi/templates/webapi.csproj
+++ b/generators/webapi/templates/webapi.csproj
@@ -9,9 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1" />
-  </ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2" />
+  	<% if (includeSwagger) { %><PackageReference Include="Swashbuckle.AspNetCore" Version="1.0.0" /><% } %>
+	</ItemGroup>
 
 </Project>
